--- a/Legende/Base.lproj/LaunchScreen.storyboard
+++ b/Legende/Base.lproj/LaunchScreen.storyboard
@@ -18,28 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="titanium-texture.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="442-Fv-OtP" userLabel="imageView">
-                                <rect key="frame" x="0.0" y="20" width="400" height="600"/>
+                            <imageView multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Fond Clair.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="442-Fv-OtP" userLabel="imageView">
+                                <rect key="frame" x="0.0" y="0.0" width="2560" height="600"/>
                                 <color key="backgroundColor" red="0.0056161218069999998" green="0.1091782447" blue="0.29014756940000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="600" id="Amd-QA-xj3">
-                                        <variation key="widthClass=compact" constant="620"/>
-                                    </constraint>
-                                    <constraint firstAttribute="width" constant="400" id="XVE-eK-JBC"/>
-                                </constraints>
-                                <variation key="widthClass=compact">
-                                    <mask key="constraints">
-                                        <exclude reference="Amd-QA-xj3"/>
-                                        <exclude reference="XVE-eK-JBC"/>
-                                    </mask>
-                                </variation>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_on_solution_goodtimes.png" translatesAutoresizingMaskIntoConstraints="NO" id="Soa-0P-nPj">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_itmation_c.png" translatesAutoresizingMaskIntoConstraints="NO" id="Soa-0P-nPj">
+                                <rect key="frame" x="203" y="277" width="194" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="2nO-YW-vrM"/>
+                                    <constraint firstAttribute="width" constant="194" id="3nU-44-29I"/>
                                     <constraint firstAttribute="width" constant="161" id="Oqv-eE-lx0"/>
+                                    <constraint firstAttribute="height" constant="45" id="vj2-z5-P7d"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -54,41 +44,81 @@
                                     </mask>
                                 </variation>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="datalogger_splash.png" translatesAutoresizingMaskIntoConstraints="NO" id="c72-IJ-Nem">
+                                <rect key="frame" x="304" y="450" width="299" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="299" id="S8Z-zD-CBH"/>
+                                    <constraint firstAttribute="height" constant="150" id="sjS-CE-6l8"/>
+                                </constraints>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="S8Z-zD-CBH"/>
+                                        <exclude reference="sjS-CE-6l8"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="c72-IJ-Nem" secondAttribute="bottom" id="4Qx-cH-Bke"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="c72-IJ-Nem" secondAttribute="trailing" constant="-23" id="97L-uo-36D"/>
+                            <constraint firstItem="c72-IJ-Nem" firstAttribute="top" secondItem="Soa-0P-nPj" secondAttribute="bottom" constant="29" id="AF6-fX-JKS">
+                                <variation key="widthClass=compact" constant="103"/>
+                            </constraint>
+                            <constraint firstItem="442-Fv-OtP" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="CZB-uL-cEg"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="c72-IJ-Nem" secondAttribute="bottom" id="IUZ-Ft-vpI"/>
+                            <constraint firstItem="c72-IJ-Nem" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="83" id="JHO-4b-dOl">
+                                <variation key="widthClass=compact" constant="77"/>
+                            </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="c72-IJ-Nem" secondAttribute="trailing" constant="-22" id="Mqt-Hb-78D">
+                                <variation key="widthClass=compact" constant="-16"/>
+                            </constraint>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="c72-IJ-Nem" secondAttribute="bottom" id="MyJ-6G-Btj"/>
+                            <constraint firstItem="442-Fv-OtP" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="VxT-7z-Pj4"/>
+                            <constraint firstItem="Soa-0P-nPj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="awV-0Q-mvd"/>
                             <constraint firstItem="442-Fv-OtP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="bbX-oW-Q7M"/>
                             <constraint firstAttribute="trailing" secondItem="442-Fv-OtP" secondAttribute="trailing" id="cC9-nN-I40"/>
+                            <constraint firstItem="Soa-0P-nPj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cLe-lj-5d9"/>
+                            <constraint firstItem="442-Fv-OtP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="dhC-iY-dWy"/>
                             <constraint firstItem="442-Fv-OtP" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="kYP-iE-CeE"/>
                             <constraint firstAttribute="bottomMargin" secondItem="442-Fv-OtP" secondAttribute="bottom" constant="-20" id="nO6-Sz-QRX"/>
                             <constraint firstItem="Soa-0P-nPj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="o3B-Eu-9mC"/>
                             <constraint firstItem="Soa-0P-nPj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="sUW-XE-4Sj"/>
                         </constraints>
                         <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="Soa-0P-nPj"/>
-                            </mask>
                             <mask key="constraints">
-                                <exclude reference="o3B-Eu-9mC"/>
-                                <exclude reference="sUW-XE-4Sj"/>
                                 <exclude reference="bbX-oW-Q7M"/>
                                 <exclude reference="cC9-nN-I40"/>
                                 <exclude reference="kYP-iE-CeE"/>
                                 <exclude reference="nO6-Sz-QRX"/>
+                                <exclude reference="o3B-Eu-9mC"/>
+                                <exclude reference="sUW-XE-4Sj"/>
+                                <exclude reference="AF6-fX-JKS"/>
+                                <exclude reference="JHO-4b-dOl"/>
+                                <exclude reference="Mqt-Hb-78D"/>
+                                <exclude reference="IUZ-Ft-vpI"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="Soa-0P-nPj"/>
+                                <include reference="c72-IJ-Nem"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="o3B-Eu-9mC"/>
-                                <include reference="sUW-XE-4Sj"/>
                                 <include reference="bbX-oW-Q7M"/>
                                 <include reference="cC9-nN-I40"/>
                                 <include reference="kYP-iE-CeE"/>
                                 <include reference="nO6-Sz-QRX"/>
+                                <include reference="o3B-Eu-9mC"/>
+                                <include reference="sUW-XE-4Sj"/>
+                                <exclude reference="97L-uo-36D"/>
+                                <include reference="AF6-fX-JKS"/>
+                                <include reference="JHO-4b-dOl"/>
+                                <include reference="Mqt-Hb-78D"/>
+                                <exclude reference="4Qx-cH-Bke"/>
+                                <include reference="IUZ-Ft-vpI"/>
+                                <exclude reference="MyJ-6G-Btj"/>
                             </mask>
                         </variation>
                     </view>
@@ -96,11 +126,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.5" y="375"/>
+            <point key="canvasLocation" x="51" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="logo_on_solution_goodtimes.png" width="345" height="81"/>
-        <image name="titanium-texture.jpg" width="3000" height="2000"/>
+        <image name="Fond Clair.jpg" width="2560" height="1719"/>
+        <image name="datalogger_splash.png" width="622" height="317"/>
+        <image name="logo_itmation_c.png" width="513" height="108"/>
     </resources>
 </document>
