--- a/Legende/Base.lproj/LaunchScreen.storyboard
+++ b/Legende/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -23,7 +23,7 @@
                                 <color key="backgroundColor" red="0.0056161218069999998" green="0.1091782447" blue="0.29014756940000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_itmation_c.png" translatesAutoresizingMaskIntoConstraints="NO" id="Soa-0P-nPj">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_itmation_735x156.png" translatesAutoresizingMaskIntoConstraints="NO" id="Soa-0P-nPj">
                                 <rect key="frame" x="203" y="277" width="194" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="2nO-YW-vrM"/>
@@ -58,7 +58,6 @@
                                 </variation>
                             </imageView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="c72-IJ-Nem" secondAttribute="bottom" id="4Qx-cH-Bke"/>
@@ -132,6 +131,6 @@
     <resources>
         <image name="Fond Clair.jpg" width="2560" height="1719"/>
         <image name="datalogger_splash.png" width="622" height="317"/>
-        <image name="logo_itmation_c.png" width="513" height="108"/>
+        <image name="logo_itmation_735x156.png" width="735" height="156"/>
     </resources>
 </document>
